--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,24 @@ android {
         applicationId "com.shwetank.nasamarsphotos"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            def project = "Curiosity_rover_Images"
+            def SEP = "_"
+            def flavor = "Prod"
+            def version = 1.0
+            def date = new Date();
+            def formattedDate = date.format('ddMMyy')
+            def newApkName = project + SEP + flavor + SEP + version + SEP + formattedDate + ".apk"
+            outputFileName = new File(newApkName)
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -86,7 +98,6 @@ dependencies {
 
 
     implementation "androidx.recyclerview:recyclerview:1.2.0-alpha04"
-    debugImplementation 'com.squareup.leakcanary:plumber-android:2.4'
 }
 
 kapt {
